# streamlit_app

./: .gitignore  Main.py  Model_Data.py  README.md  pyproject.toml
pages/: 1_EDA.py  2_Predict.py  3_Model.py
