[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Lezhandre <duzhenku@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
streamlit = "^1.38.0"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
